# spc_plotly

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
assets/: XmR_Example.html
spc_plotly/: xmr.py
spc_plotly/helpers/: axes_formats.py  menus.py  signals.py
spc_plotly/utils/: combine_paths.py  endpoints.py  rounding_multiple.py
src/: __init__.py
src/spc_plotly/: xmr.py
src/spc_plotly/helpers/: annotations.py  base_traces.py  limit_lines.py
src/spc_plotly/utils/: calc_xmr_func.py  rounded_value.py
src/tests/: test_xmr.py
